tests/ui/bad_arg_err.stderr
error: expected `even` or `odd`
 --> tests/ui/bad_arg_err.rs:3:14
  |
3 | #[bit_parity(foo)]
  |              ^^^
