tests/ui/bad_arg_err.rs
use parity_enum::bit_parity;

#[bit_parity(foo)]
enum BadArg {
    A,
    B,
}

fn main() {}
